--- a/styles/exhibitions.css
+++ b/styles/exhibitions.css
@@ -123,10 +123,10 @@ h4 {
   background-image: url(../images/icons/tellus.png);
 } */
 
-.gallery-section {
+/* .gallery-section {
   width: 100%;
   margin: 0 auto;
-}
+} */
 
 .gallery-wrapper {
   margin: 2rem auto;
@@ -138,7 +138,7 @@ h4 {
   gap: 1rem;
 }
 
-.gallery-wrapper figure, .gallery-wrapper img {
+/* .gallery-wrapper figure, .gallery-wrapper img {
   display: block;
   width: 100%;
   margin: 0;
@@ -153,7 +153,7 @@ h4 {
   color: #fff;
   padding: 1rem 2rem;
   border-radius: 0 50px 0 0;
-}
+} */
 
 /* styles that change
 --------------------*/
@@ -168,10 +168,10 @@ h4 {
     font-size: 1.5rem;
   }
 
-  .gallery-quote {
+  /* .gallery-quote {
     font-size: 1.5rem;
     text-align: center;
-  }
+  } */
 
    .gallery-wrapper {
     gap: 2rem;
@@ -215,9 +215,6 @@ h4 {
 @media only screen and (min-width: 1800px) {
   /* Header
 --------------------*/
-  /* .purple-box {
-    width: 320px;
-  } */
 
   /* .dropdown-info {
     width: 320px;
