--- a/styles/index.css
+++ b/styles/index.css
@@ -618,10 +618,10 @@ h6 {
 @media only screen and (min-width: 992px) {
   /* Header
 --------------------*/
-  .fading-background_1,
+  /* .fading-background_1,
   .fading-background_2 {
     top: 97px;
-  }
+  } */
 
   .search-dropdown {
     top: 70px;
