--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,7 +1,7 @@
 :root {
   --magenta: #a20067;
   --button-color: #a20067;
-  --navbar-color: #0091AB;
+  --navbar-color: #05778b;
   --dark-purple: #210759;
   --heading-bg: #252525;
   --purple: #470c68;
