--- a/styles/index.css
+++ b/styles/index.css
@@ -623,7 +623,7 @@ h6 {
     top: 97px;
   } */
 
-  .search-dropdown {
+  /* .search-dropdown {
     top: 70px;
   }
 
@@ -633,7 +633,7 @@ h6 {
 
   .profile-dropdown {
     top: 70px;
-  }
+  } */
 
   /* Main
 --------------------*/
