--- a/styles/in_common.css
+++ b/styles/in_common.css
@@ -130,92 +130,64 @@ a {
 
 /* header 
 --------------------*/
-
-/* search-dropdown */
-/* .search-dropdown {
+.modal {
   position: absolute;
-  top: 130px;
-  width: 100%;
-  left: 0;
-  z-index: 1000;
+  width: 95%;
+  max-width: 500px;
+  top: 0;
+  right: 2.5%;
   display: flex;
   flex-direction: column;
   background-color: white;
-  border-bottom: 6px solid var(--dark-blue);
-  border-radius: 70px 0 70px 0;
+  color: #000;
+  border-radius: 5px;
   display: none;
-}
-
-.search-dropdown {
+  z-index: 1000;
   animation-name: animate-dropdown;
   animation-duration: 0.3s;
   animation-timing-function: ease-out;
 }
 
-.search-header {
-  z-index: 1000;
+.modal-heading {
+  position: relative;
   width: 100%;
+  background-color: #252525;
+  color: #fff;
   font-family: var(--proxima-soft);
   font-size: 1.5rem;
   text-transform: capitalize;
   text-align: center;
-  background-color: var(--magenta);
-  color: #fff;
-  margin-top: 0;
-  padding: 17px;
-  border-radius: 75px 0 75px 0;
+  margin: 0;
+  padding: 0.75rem;
+  border-radius: 5px 5px 0 0;
 }
 
-form {
-  width: 85%;
-  margin: 0 auto;
+.modal-body {
+  padding: 1.5rem 1.5rem 2rem 1.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
-.dropdown-text {
-  font-size: 1.125rem;
+/* form {
   width: 85%;
   margin: 0 auto;
-  padding-bottom: 32px;
 } */
 
-/* ticket-dropdown */
-.ticket-dropdown {
+.modal-text {
+  font-size: 1rem;
+  padding: 0;
+  margin: 0;
+}
+
+.close-icon {
   position: absolute;
-  top: 130px;
-  width: 100%;
-  left: 0;
-  z-index: 1000;
-  display: flex;
-  flex-direction: column;
-  background-color: white;
-  border-bottom: 6px solid var(--dark-blue);
-  border-radius: 70px 0 70px 0;
-  display: none;
+  font-size: 1.25rem;
+  top: 0.75rem;
+  right: 0.75rem;
+  cursor: pointer;
 }
 
-.ticket-dropdown {
-  animation-name: animate-dropdown;
-  animation-duration: 0.3s;
-  animation-timing-function: ease-out;
-}
-
-.ticket-header {
-  z-index: 1000;
-  width: 100%;
-  font-family: var(--proxima-soft);
-  font-size: 1.5rem;
-  text-transform: capitalize;
-  text-align: center;
-  background-color: var(--magenta);
-  color: #fff;
-  margin-top: 0;
-  padding: 17px;
-  border-radius: 75px 0 75px 0;
-}
-
-form.ticket {
-  margin: 0 auto;
-}
 
 #select {
   font-family: var(--proxima-soft);
@@ -237,65 +209,8 @@ form.ticket {
   background-color: var(--light-grey);
 }
 
-button.ticket {
-  display: block;
-  font-family: var(--sofia);
-  font-size: 1.25rem;
-  background-color: var(--button-color);
-  color: #fff;
-  padding: 8px 50px;
-  margin: 25px auto 50px auto;
-  border-radius: 10px;
-  border-bottom: 3px solid #ffffff;
-  border-right: 2px solid #ffffff;
-  cursor: pointer;
-  transition-property: scale;
-  transition-duration: 0.5s;
-  scale: 1;
-}
-
-button.ticket:hover {
-  scale: 1.1;
-}
-
-/* profile-dropdown */
-.profile-dropdown {
-  position: absolute;
-  top: 130px;
-  width: 100%;
-  left: 0;
-  z-index: 1000;
-  display: flex;
-  flex-direction: column;
-  background-color: white;
-  border-bottom: 6px solid var(--dark-blue);
-  border-radius: 70px 0 70px 0;
-  display: none;
-}
-
-.profile-dropdown {
-  animation-name: animate-dropdown;
-  animation-duration: 0.3s;
-  animation-timing-function: ease-out;
-}
-
-.profile-header {
-  z-index: 1000;
-  width: 100%;
-  font-family: var(--proxima);
-  font-size: 1.5rem;
-  text-align: center;
-  text-transform: capitalize;
-  background-color: var(--magenta);
-  color: #fff;
-  margin-top: 0;
-  padding: 17px;
-  border-radius: 75px 0 75px 0;
-}
-
 label {
-  /* font-family: var(--neue-haas); */
-  /* font-weight: bold; */
+  font-size: 1rem;
 }
 
 input, select, textarea {
@@ -359,19 +274,14 @@ header {
 .logo {
   display: block;
   width: 250px;
-  margin: 1rem auto 0 auto;
+  margin: 0 auto;
+  padding: 0.5rem;
 }
 
 .logo img {
   display: block;
   width: 250px;
 }
-
-
-
-/* .nav-icons-wrapper li {
-  list-style: none;
-} */
 
 .navbar {
   position: sticky;
@@ -390,20 +300,12 @@ header {
 
 .menu-link {
   text-decoration: none;
+  font-size: 1.25rem;
 }
 
 .menu-link:hover {
   text-decoration: underline;
 }
-
-/* header {
-  display: inline;
-} */
-
-/* mobile menu */
-/* .fa-bars {
-  font-size: 1.875rem;
-} */
 
 .mobile-menu {
   display: flex;
@@ -417,11 +319,6 @@ header {
   padding: 0;
   margin: 0;  
 }
-
-/* .mobile-menu-list label p {
-  display: block;
-  margin: 0;
-} */
 
 .navbar-menu {
    display: flex;
@@ -474,10 +371,6 @@ ul li {
   list-style: none;
 }
 
-/* #visit {
-  margin-bottom: 20px;
-} */
-
 .mobile-menu-list li {
   display: block;
   font-size: 1.25rem;
@@ -488,10 +381,6 @@ ul li {
 .mobile-menu-list li:first-of-type {
  padding-top: 1rem;
 }
-
-/* .mobile-menu-list li:last-child {
-  padding-bottom: 1rem;
-} */
 
 .hamburger-label {
   display: flex;
@@ -547,7 +436,7 @@ ul li {
   background-color: #00000099;
   position: absolute;
   top: 0;
-  z-index: 600;
+  z-index: 60;
   width: 100%;
   height: 4000px;
   display: none;
@@ -632,10 +521,10 @@ ul li {
   outline: none;
 }
 
-.input-wrapper {
+/* .input-wrapper {
   display: flex;
-  justify-content: flex-start;
-}
+  flex-direction: column;
+} */
 
 #newsletter-input:focus {
   border-color: var(--magenta);
@@ -830,12 +719,12 @@ footer {
 @media only screen and (min-width: 576px) {
   /* Header
 --------------------*/
-  .search-dropdown,
+  /* .search-dropdown,
   .ticket-dropdown,
   .profile-dropdown {
     width: 70%;
     left: 15%;
-  }
+  } */
   /* Main
 --------------------*/
   /* section.newsletter {
@@ -880,9 +769,9 @@ footer {
     justify-content: flex-end;
   }
 
-  .dropdown-wrapper {
+  /* .dropdown-wrapper {
     position: relative;
-  }
+  } */
 
   /* .fading-background_1,
   .fading-background_2 {
@@ -893,7 +782,7 @@ footer {
     margin-left: 3rem;
   } */
 
-  .search-dropdown {
+  /* .search-dropdown {
     top: 59px;
     right: 50%;
     left: auto;
@@ -912,7 +801,7 @@ footer {
     right: 50%;
     left: auto;
     min-width: 400px;
-  }
+  } */
 
   /* section.newsletter {
     width: 50%;
@@ -952,7 +841,7 @@ footer {
 
   /* Header
 --------------------*/
-  .logo {
+  /* .logo {
     width: 300px;
     margin-top: 1rem;
     margin-bottom: 1rem;
@@ -960,14 +849,14 @@ footer {
 
   .logo img {
     width: 300px;
-  }
+  } */
 
   /* .fading-background_1,
   .fading-background_2 {
     top: 97px;
   } */
 
-  .search-dropdown {
+  /* .search-dropdown {
     top: 70px;
   }
 
@@ -977,7 +866,7 @@ footer {
 
   .profile-dropdown {
     top: 70px;
-  }
+  } */
 
   .main-wrapper {
     width: 90%;
@@ -1024,6 +913,10 @@ footer {
   .fading-background_2 {
     border-radius: 0 60px 0 0;
   } */
+
+  .menu-link {
+    font-size: 1.375rem;
+  }
 
   .mobile-menu-list {
     display: none;
