menu text removed

--- a/styles/index.css
+++ b/styles/index.css
@@ -144,6 +144,7 @@ figure {
 .hero-button {
   align-self: start;
   padding: 1rem 2rem;
+  text-transform: uppercase;
 }
 
 h1 {
@@ -179,10 +180,6 @@ h2 {
 .fa-clock {
   color: var(--white);
   font-size: 1.5rem;
-}
-
-.hero-button::after {
-  content: "\002A";
 }
 
 .ticketmaster {
